# Infiniminer

./: .gitmodules  CMakeLists.txt  Infiniminer.sln  build.sh  build_shaders.sh
Infiniminer/: Camera.cs  ClickRegion.cs  Infiniminer.csproj  InfiniminerGame.cs  KeyBindHandler.cs  KeyMap.cs  Program.cs  PropertyBag.cs  ServerInformation.cs  Vectors.cs
Infiniminer/Engines/: BlockEngine.cs  InterfaceEngine.cs  ParticleEngine.cs  PlayerEngine.cs  SkyboxEngine.cs
Infiniminer/InterfaceItems/: InterfaceButtonToggle.cs  InterfaceElement.cs  InterfaceLabel.cs  InterfaceSlider.cs  InterfaceTextInput.cs
Infiniminer/StateMasher/: State.cs  StateMachine.cs
Infiniminer/States/: ClassSelectionState.cs  LoadingState.cs  MainGameState.cs  ServerBrowserState.cs  SettingsState.cs  TeamSelectionState.cs  TitleState.cs
InfiniminerServer/: CaveGenerator.cs  InfiniminerServer.cs  InfiniminerServer.csproj  MapSender.cs  Program.cs  server.config.txt
InfiniminerShared/: GeneralEnums.cs  InfiniminerShared.csproj  LiteNetLibHelpers.cs  Player.cs  SharedConstants.cs  SpriteModel.cs
InfiniminerShared/Effects/: AllShaders.cs  Basic.cs  Lava.cs  Particle.cs  ShCompHelper.cs  ShaderFeatures.cs  SkyPlane.cs  SpriteModel.cs
InfiniminerShared/Framework/: ContentManager.cs  Effect.cs  NetClient.cs  NetPeerExtensions.cs  Render2DExt.cs  SoundEffect.cs
PublishAssets/: PublishAssets.projitems
PublishTools/: MingwDeps.cs  Program.cs
Shaders/: Basic.glsl  Lava.glsl  SkyPlane.glsl  SpriteModel.glsl
