cmake_minimum_required (VERSION 3.1)
project (infiniminernatives)
set(CMAKE_C_STANDARD 99)
set(LIBOUTPUTDIR ${CMAKE_BINARY_DIR}/binaries)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBOUTPUTDIR})

MESSAGE(STATUS "Build type: " ${CMAKE_BUILD_TYPE})
MESSAGE(STATUS "Library Type: " ${LIB_TYPE})
MESSAGE(STATUS "Compiler flags:" ${CMAKE_CXX_COMPILE_FLAGS})
MESSAGE(STATUS "Compiler cxx release (debug info )flags:" ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
MESSAGE(STATUS "Compiler cxx min size flags:" ${CMAKE_CXX_FLAGS_MINSIZEREL})
MESSAGE(STATUS "Compiler cxx flags:" ${CMAKE_CXX_FLAGS})
if (WIN32)
    set(CMAKE_SHARED_LIBRARY_PREFIX "")
    set(CMAKE_STATIC_LIBRARY_PREFIX "")
    set(CMAKE_SHARED_MODULE_PREFIX "")
    set(CMAKE_IMPORT_LIBRARY_PREFIX "")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${LIBOUTPUTDIR}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${LIBOUTPUTDIR}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${LIBOUTPUTDIR}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${LIBOUTPUTDIR}")
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${LIBOUTPUTDIR}")
    set(CMAKE_PDB_OUTPUT_DIRECTORY_MINSIZEREL "${LIBOUTPUTDIR}")
	set(CMAKE_PDB_OUTPUT_DIRECTORY_RELWITHDEBINFO "${LIBOUTPUTDIR}")
	set(CMAKE_RELWITHDEBINFO_POSTFIX "")
	set(CMAKE_MINSIZEREL_POSTFIX "")
endif()
if(NOT MSVC_IDE)
  set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")
endif()

add_subdirectory(extern/Librelancer/extern/lancerdecode lancerdecode)
add_subdirectory(extern/Librelancer/src/pangogame pangogame)
add_subdirectory(extern/Librelancer/src/lancerdialogs lancerdialogs)
